2005-05-20 Magnus Hagdorn
 * glide_lithot.f90: fixed bug calling CG solver, added routine for
   calculating geothermal heat flux
 * glide.f90: glide_lithot is loaded into module
 * simple_glide.f90: quick hack, need to initialise surf temps before
   lithosphere is initialised

2005-05-20 Magnus Hagdorn
 * glimmer_sparse.f90: new module for handling sparse matrices
 * Makefile.am: added glimmer_sparse.f90 to libglimmer sources
 * glide_vars.def: added litho temp
 * glide_types.f90: added sparse matrices and vectors for CG
 * glide_lithot.f90: calculate sparse matrix and hook up solver
   doesn't work yet
 * glide.f90: added lithot calculations

2005-05-18 Magnus Hagdorn
 * glide_types.f90: new type for thermal litho
 * glide_vars.def: add new dimension for layers of lithosphere
 * glide_nc_custom.f90: fill litho dimension
 * glide_setup.f90: make sigma layer calculating function public
 * glide_lithot.f90: new module for thermal diffu calculations of lithosphere
   currently, this just sets up the dimension variable
 * glide.f90: add init_lithot to initialisation routines
 * Makefile.am: add glide_lithot.f90 to glide sources

2005-05-18 Ian Rutt
 * Bug-fix changes to couple to Energy-balance mass-balance model

2005-05-17 Magnus Hagdorn
 * glide_types.f90: added variable basal heat flux
 * glide_vars.def: ditto
 * glide_temp.f90: replaced scalar geothermal heat flux with variable
   basal heat flux
 * glide.f90: initialise variable basal heat flux with scalar geothermal 
   heat flux

2005-05-17 Ian Rutt
 * Added test example for energy-balance mass-balance scheme
 * Changed mass-balance schemes to only calculate 'land' points (i.e. mask
 is passed though) - hopefully might speed things up.
 * Removed unnecessary log line in glex_ebm_clim.f90 - we do need to convert temperature

2005-05-16 Ian Rutt
 * Removed dummy code glimmer_enmabal.f90
 * Merged in changes to allow use of RAPID energy-balance mass-balance